@@ -8,6 +8,7 @@ ver 0.15.11 (2010/??/??)
   - ffmpeg: fix memory leak
   - ffmpeg: free AVFormatContext on error
   - ffmpeg: read more metadata
+  - ffmpeg: fix libavformat 0.6 by using av_open_input_stream()
 * playlist: emit IDLE_OPTIONS when resetting single mode
 * listen: make get_remote_uid() work on BSD
 
